<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="@color/colorRed"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:gravity="center_horizontal" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:
        android:hint="@string/login_password"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:text="@string/login_remember_me" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/login_login_btn"/>


        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/register_register_btn" />

    </LinearLayout>

</LinearLayout>
